@@ -36,6 +36,11 @@ The OpenSSN project is licensed under the GNU General Public License,
 version 2. The LinuxSSN project was also GNU GPL licensed and we
 carry on that tradition. Please see the LICENSE file for further details.
 
+Data files, missions, artwork and images included in OpenSSN are
+licensed under the Creative Commons CC0 1.0 Universal license. 
+Please see the ART-LICENSE file for full details.
+
+
 
 
 What do I need to build OpenSSN?
@@ -53,7 +58,7 @@ Assuming the above libraries are installed, it should be possible to
 build OpenSSN with the following commands
 
 tar zxf openssn-0.4.tar.gz
-cd openssn/src
+cd openssn
 make
 
 
@@ -64,8 +69,8 @@ Running OpenSSN
 ==================================
 
 Once OpenSSN has built, an executable file (called openssn) will
-be placed in the directory immediately above the "src" folder.
-The game can be run with plain
+be placed in the top level directory. From there
+the game can be run with the command:
 
 ./openssn
 
@@ -88,7 +93,7 @@ manipulate the submarine, however keyboard support is included and
 the following keys work.
 
 
-Direct the submarine..............
+Pilot the submarine..............
 Plus key		Increase sub's speed
 Minus key		Slow down
 Left keypad (4)		Turn left
