@@ -1,8 +1,8 @@
 AI stuff
   Warships should hunt enemies.
-  Warships should fire at enemies.
   Torpedoes should be confused by noisemakers.
   AI warships should carry noisemakers
+  If a torpedo loses its target, it should try to find a new one.
 
 Active sonar
 Maybe we should be able to cut the towed array
